--- a/index.html
+++ b/index.html
@@ -5,38 +5,44 @@
     <title>Camino de Santiago</title>
 </head>
 <body>
-    <div class="header">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="journal.html">Journal</a></li>
-            <li>About Us</li>
-        </ul>
-   </div>
-<div class="row">
-    <div class="column">
-        <img src="./resurse/imagini/old.jpg" alt="Batranul si marea" style="width:100%">
-    </div>
-    <div class="column">
-        <img src="./resurse/imagini/bridge.jpg" alt="bridge" style="width:100%">
-    </div>
-    <div class="column">
-        <img src="./resurse/imagini/semn.jpg" alt="semn" style="width:100%">
-    </div>
-    <div class="column">
-        <img src="./resurse/imagini/baiona.jpg" alt="baiona" style="width:100%">
-    </div>
-    <div class="column">
-        <img src="./resurse/imagini/catedrala.jpg" alt="catedrala" style="width:100%">
-    </div>
+     
+    <!--Header-->
+
+<header>
+    <nav>
+        <span><a href="index.html">Home</a></span>
+        <span><a href="journal.html">Journal</a></span>
+        <span><a href=#>About Us</a></span>
+    </nav>
+</header> 
+
+<main>
+
+<div class="column">
+            <img src="./resurse/imagini/old.jpg" style="width: 100%" alt="Batranul si marea" />
+</div>
+<div class="column">
+            <img src="./resurse/imagini/bridge.jpg" style="width: 100%" alt="bridge" />
+</div>
+<div class="column">
+            <img src="./resurse/imagini/semn.jpg" style="width: 100%" alt="semn" />
+</div>
+ <div class="column">
+            <img src="./resurse/imagini/baiona.jpg" style="width: 100%" alt="baiona" />
+</div>
+<div class="column">
+            <img src="./resurse/imagini/catedrala.jpg" style="width: 100%" alt="catedrala" />
 </div>
 
-<h1>Camino de Santiago</h1>
 
-<div class="container"> 
+<div class="background"> 
     <img src="./resurse/imagini/semn.jpg" alt="">
-    <a href="journal.html"><div class="center"><em>This is our beautiful journey on the Coastal Route of Caminho Portugues</em></div></a>
+    <a href="journal.html"><div class="center">Our beautiful journey on the Coastal Route of Caminho Portugues</div></a>
 
 </div>
+</main>
+
+<!--Footer-->
 
 <footer>
     <div class="footer">
