--- a/journal.html
+++ b/journal.html
@@ -2,17 +2,21 @@
 <html>
     <head>
     <link rel="stylesheet" type="text/css" href="./resurse/css/journal.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <title>Camino de Santiago/Journal</title>
     </head>
 </html>
 <body>
-    <div class="header">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="journal.html">Journal</a></li>
-            <li>About Us</li>
-        </ul>
-   </div>
+  <!--Header-->
+
+<header>
+    <nav>
+        <span><a href="index.html">Home</a></span>
+        <span><a href="journal.html">Journal</a></span>
+        <span><a href=#>About Us</a></span>
+    </nav>
+</header> 
 
    <!--<div class="wrapper">
        <section class="journey-links">
